--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="./dealdogicon.png" type="image/png">
+    <link href="https://fonts.googleapis.com/css?family=Avenir:100,300,400,500,600,700,800,900" rel="stylesheet">
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>DealDog</title>
   </head>
 
